--- a/src/pages/login-signup/login-signup.scss
+++ b/src/pages/login-signup/login-signup.scss
@@ -1,3 +1,10 @@
 page-login-signup {
-
+    .login{
+        max-width: 30em;
+        display:block;
+        margin:0 auto;
+        background-color: #ffffff;
+        margin-top: 5em;
+        box-shadow: 0px 0px 25px #dedede;
+    }
 }
